--- a/app/views/header.html
+++ b/app/views/header.html
@@ -1,7 +1,7 @@
-<nav>
+<!-- <nav>
   <div class="nav-wrapper red lighten-1">
     <a href="#!" class="brand-logo">
-      <img src="assets/img/logo_piopio_small.png" alt="">
+      <img src="assets/img/logo-utn.png" alt="">
     </a>
     <span class="location">
       <a href="#/" class="breadcrumb">Cajero</a>
@@ -40,10 +40,56 @@
     <li class="divider"></li>
     <li><a href="javascript:void(0)" onclick="location.href=(BASE_URL+'auth/logout');"><i class="material-icons">exit_to_app</i>Cerrar sesión</a></li>
   </ul>
-</nav>
+</nav>-->
+  <nav>
+    <div class="nav-wrapper menu">
+      <a href="#!" class="brand-logo"><img src="assets/img/logo-utn.png" alt=""></a>
+      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a> <!-- Icono menú responsive -->
+      <ul class="right hide-on-med-and-down">
+          <li><a class="dropdown-button" href="#!" data-activates="dropdownAlumnos">Alumnos<i class="material-icons right">arrow_drop_down</i></a></li>
+          <li>
+            <a class="dropdown-button" data-activates="secciones">
+              Opciones de configuración
+              <i class="material-icons right">menu</i>
+            </a>
+          </li>
+          <li>
+            <a class="dropdown-button" data-activates="dropdownUsuario">
+              <img src="assets/img/default-user-image.png" alt="" class="circle img-profile-small">
+              <i class="material-icons right">arrow_drop_down</i>
+            </a>
+          </li>
+      </ul>
+      <ul class="side-nav" id="mobile-demo">
+          <li><a href="sass.html">Sass</a></li>
+          <li><a href="badges.html">Components</a></li>
+          <li><a href="collapsible.html">Javascript</a></li>
+          <li><a href="mobile.html">Mobile</a></li>
+        </ul>
+    </div>
+  </nav>    
+  
+  <ul id="dropdownAlumnos" class="dropdown-content">
+      <li><a href="#!">Agregar</a></li>
+      <li class="divider"></li>
+      <li><a href="#!">Listar</a></li>
+    </ul>
+    <ul id="dropdownUsuario" class="dropdown-content">
+      <li><a href="#!">Perfil</a></li>
+      <li class="divider"></li>
+      <li><a href="#!">Salir</a></li>
+    </ul>
 
 <script>
-  $(document).ready(function () {
-    $(".dropdown-button").dropdown();
-  })
-</script>
+    $(document).ready(function () {   
+      $(".dropdown-button").dropdown();  
+      $(".button-collapse").sideNav();      
+    })
+  </script>
+
+<style>
+  .menu{
+    background: #333333;
+  }
+
+</style>
