--- a/app/views/alumno_agregar.html
+++ b/app/views/alumno_agregar.html
@@ -1,45 +1,54 @@
 <main class="container">
-    <!-- <h2 class="title"><span ng-bind="isAdding ? 'Agregar' : 'Modificar'"></span> <strong>mesa</strong></h2> -->
     <h2>Agregar alumno</h2>
 
-    <div class="row" ng-controller="AlumnoController">
-        <form id="formAlumno" class="col s12" ng-submit="agregarAlumno(alumno)">
+    <div class="row">
+        <form id="formAlumno" name="formAlumno" class="col s12" ng-submit="agregarAlumno(alumno)">
             <div class="row">
                 <div class="input-field col s6">
-                    <input id="nombre" type="text" class="validate" ng-model="alumno.nombre">
+                    <input class="elementos" id="nombre" name="nombre" type="text" class="" ng-model="alumno.nombre" ng-required="true">
                     <label for="nombre">Nombre</label>
+                    <p class="advertencia" ng-show="formAlumno.nombre.$error.required && !formAlumno.nombre.$pristine" class="help-block">El nombre no puede ser vacío</p>
                 </div>
                 <div class="input-field col s6">
-                    <input id="apellido" type="text" class="validate" ng-model="alumno.apellido">
+                    <input class="elementos" id="apellido" name="apellido" type="text" class="" ng-model="alumno.apellido" ng-required="true">
                     <label for="apellido">Apellido</label>
+                    <p class="advertencia" ng-show="formAlumno.apellido.$error.required && !formAlumno.apellido.$pristine" class="help-block">El apellido no puede ser vacío</p>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="dni" type="number" class="validate" ng-model="alumno.dni">
+                    <input class="elementos" id="dni" name="dni" type="number" min="1" class="" ng-model="alumno.dni" ng-required="true">
                     <label for="dni">DNI</label>
+                    <p class="advertencia" ng-show="formAlumno.dni.$error.required && !formAlumno.dni.$pristine" class="help-block">El DNI no puede ser vacío</p>
+                    <p class="advertencia" ng-show="formAlumno.dni.$invalid && !formAlumno.dni.$pristine" class="help-block">El DNI debe ser numérico</p>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="email" type="email" class="validate" ng-model="alumno.email">
+                    <input class="elementos" id="email" name="email" type="email" class="" ng-model="alumno.email" ng-required="true">
                     <label for="email">Email</label>
+                    <p class="advertencia" ng-show="formAlumno.email.$error.required && !formAlumno.email.$pristine" class="help-block">El email no puede ser vacío</p>
+                    <p class="advertencia" ng-show="formAlumno.email.$invalid && !formAlumno.email.$pristine" class="help-block">Ingrese un email correcto</p>
                 </div>
             </div>
             <div class="row">
                     <div class="input-field col s6">
-                      <input id="telefono" type="tel" class="validate" ng-model="alumno.telefono">
+                      <input class="elementos" id="telefono" name="telefono" min="1" type="number" class="" ng-model="alumno.telefono"> <!-- No required -->
                       <label for="icon_telephone">Teléfono</label>
+                      <!-- <p class="advertencia" ng-show="formAlumno.telefono.$error.required && !formAlumno.telefono.$pristine" class="help-block">El teléfono no puede ser vacío</p> -->
+                      <p class="advertencia" ng-show="formAlumno.telefono.$invalid && !formAlumno.telefono.$pristine" class="help-block">El teléfono debe ser numérico</p>
                     </div>
                   </div>
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="anioIngreso" type="number" class="validate" ng-model="alumno.ingreso">
+                    <input class="elementos" id="anioIngreso" name="anioIngreso" min="1" type="number" class="" ng-model="alumno.anioIngreso" ng-required="true">
                     <label for="anioIngreso">Año de ingreso</label>
+                    <p class="advertencia" ng-show="formAlumno.telefono.$error.required && !formAlumno.telefono.$pristine" class="help-block">El año de ingreso no puede ser vacío</p>
+                    <p class="advertencia" ng-show="formAlumno.telefono.$invalid && !formAlumno.telefono.$pristine" class="help-block">El año de ingreso debe ser numérico</p>
                 </div>
             </div>
-            <div class="input-field col s12 selectCarrera">
-                <select id="carrera" ng-model="alumno.carrera">
+            <div class="input-field col s12 selects">
+                <select id="carrera" name="carrera" ng-model="alumno.carrera" ng-model="alumno.carrera" ng-required="true">
                     <option value="" disabled selected>Seleccione una carrera:</option>
                     <option value="ISI">Ingeniería en Sistemas de Información</option>
                     <option value="CIVIL">Ingeniería Civil</option>
@@ -47,14 +56,16 @@
                     <option value="LOI">Licenciatura en Organización Industrial</option>
                     <option value="ING">Ingresante</option>                    
                 </select>
+                <p class="advertencia" ng-show="formAlumno.carrera.$error.required && !formAlumno.carrera.$pristine" class="help-block">Debe seleccionar una carrera</p>
             </div>
-            <div class="input-field col s12 selectCarrera">
-                    <select id="escuela" ng-model="alumno.escuela">
+            <div class="input-field col s12 selects">
+                    <select id="escuela" name="escuela" ng-model="alumno.escuela" ng-model="alumno.escuela"> <!-- No required -->
                         <option value="" disabled selected>Seleccione una escuela:</option>
                         <option value="1">Villa Malvina</option>                  
                     </select>
+                    <!-- <p class="advertencia" ng-show="formAlumno.escuela.$error.required && !formAlumno.escuela.$pristine" class="help-block">Debe seleccionar una escuela</p> -->
                 </div>
-            <input type="submit" class="btn" value="Agregar">
+            <input type="submit" class="btn" value="Agregar" ng-disabled="formAlumno.$invalid">
         </form>
     </div>
 </main>
@@ -68,33 +79,19 @@
 </script>
 
 <style>
-    .selectCarrera{
+    .selects{
         padding: 0 !important;
     }
-</style>
 
-<!--     <div class="row row-white-background">
-      <form name="formMesa" class="col s6" novalidate>
-        <div class="row">
-          <div class="input-field col s12">
-            <input ng-model="mesa.numero" placeholder="Ingrese el número correspondiente a la mesa" id="numero_mesa" name="numero_mesa" type="number" min="1" required>
-            <label for="numero_mesa" class="active">Número</label>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col s12">
-            <input ng-model="mesa.habilitada" type="checkbox" class="filled-in" id="habilitar_mesa" checked="checked" />
-            <label for="habilitar_mesa">Habilitar mesa</label>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col s12">
-            <a ng-click="addMesa(mesa)" ng-if="isAdding" ng-disabled="formMesa.$invalid" class="waves-effect waves-light btn"><i class="material-icons left">save</i>Agregar</a>
-            <a ng-click="updateMesa(mesa)" ng-if="!isAdding" ng-disabled="formMesa.$invalid" class="waves-effect waves-light btn"><i class="material-icons left">save</i>Modificar</a>
-          </div>
-        </div>
-      </form>
-    </div>
-  </main> -->
+    .advertencia{
+        margin: 0;
+        font-size: 12px;
+        color: #EA2E49;
+    }
+
+    .elementos{
+        margin: 0 !important;
+    }
+</style>
       
           
