--- a/app/views/alumno_listar.html
+++ b/app/views/alumno_listar.html
@@ -24,7 +24,7 @@
         <td>{{alumno.username}}</td>
         <td>{{alumno.first_name}}</td>
         <td>{{alumno.last_name}}</td>
-        <td><a title="Cursadas" href="#/cursadas-listar/{{alumno.username}}"><i class="listar-iconos material-icons">class</i></a><a title="Ver informes" href="#/informes-listar/{{alumno.username}}"><i class="listar-iconos material-icons">library_books</i></a><a href=""><i title="Editar" class="listar-iconos material-icons">edit</i></a></td>
+        <td><a title="Cursadas" href="#/cursadas-listar/{{alumno.username}}"><i class="listar-iconos material-icons">class</i></a><a title="Ver informes" href="#/informes-listar/{{alumno.username}}"><i class="listar-iconos material-icons">library_books</i></a><a href="#/alumnos-agregar/{{alumno.username}}"><i title="Editar" class="listar-iconos material-icons">edit</i></a></td>
       </tr>
     </tbody>
   </table>
