--- a/app/views/cursada_listar.html
+++ b/app/views/cursada_listar.html
@@ -1,6 +1,6 @@
 <main class="listar-container">
 
-        <a href="#/materia-agregar" class="btn btn-agregar">Agregar cursada</a>
+        <a href="#/cursadas-agregar" class="btn btn-agregar">Agregar cursada</a>
 
         <div class="nav-wrapper">
             <form>
@@ -49,7 +49,8 @@
           padding: 5px;
         }
         .btn-agregar{
-        margin-top: 20px;
+          margin-top: 20px;
+          margin-left: 20px;
         }
         @media screen and (max-width:800px){
           .listar-container{
