--- a/app/views/materia_listar.html
+++ b/app/views/materia_listar.html
@@ -1,6 +1,6 @@
 <main class="listar-container">
 
-    <a href="#/materia-agregar" class="btn btn-agregar">Agregar materia</a>
+    <a href="#/materias-agregar" class="btn btn-agregar">Agregar materia</a>
 
     <div class="nav-wrapper">
       <form>
@@ -23,7 +23,7 @@
       <tbody>
         <tr ng-repeat="materia in materias | filter: buscar">
           <td>{{materia.nombre}}</td>
-          <td><a title="Editar" href=""><i class="listar-iconos material-icons">edit</i></a></td>
+          <td><a title="Editar" href="#/materias-agregar/{{materia.id}}"><i class="listar-iconos material-icons">edit</i></a></td>
         </tr>
       </tbody>
     </table>
@@ -44,6 +44,7 @@
     }
     .btn-agregar{
         margin-top: 20px;
+        margin-left: 20px;
     }
     @media screen and (max-width:800px){
       .listar-container{
