--- a/app/views/alumno_agregar.html
+++ b/app/views/alumno_agregar.html
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div class="input-field col s12 selects">
-                <select id="carrera" name="carrera" ng-model="alumno.carrera" ng-model="alumno.carrera" ng-required="true">
+                <select id="carrera" name="carrera" ng-model="alumno.carrera" ng-required="true">
                     <option value="" disabled selected>Seleccione una carrera:</option>
                     <option value="ISI">Ingeniería en Sistemas de Información</option>
                     <option value="CIVIL">Ingeniería Civil</option>
