--- a/app/views/profesor_listar.html
+++ b/app/views/profesor_listar.html
@@ -1,4 +1,4 @@
-<main class="listar-container">
+<main class="listar-container" ng-init="obtenerProfesores()">
 
     <a href="#/profesores-agregar" class="btn btn-agregar">Agregar profesor</a>
 
@@ -22,10 +22,10 @@
       </thead>
   
       <tbody>
-        <tr ng-repeat="profesor in profesores | filter: buscar">
+        <tr ng-repeat="profesor in profesores"> <!--  | filter: buscar -->
           <td>{{profesor.nombre}}</td>
           <td>{{profesor.apellido}}</td>
-          <td><a title="Editar" href="#/profesores-agregar/{{profesor.dni}}"><i class="listar-iconos material-icons">edit</i></a></td>
+          <td><a title="Editar" href="#/profesores-agregar/{{profesor.id}}"><i class="listar-iconos material-icons">edit</i></a></td>
         </tr>
       </tbody>
     </table>
